Sun Oct 26 12:42:27 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htcommon/defaults.cc: Fixed description of 'head_before_get' after
      Lachlan fixes.
    * htdoc/attrs.html: rerun cf_generate.pl

Sat Oct 25 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htsearch/Display.cc: Fix #829761.
      If last component of the URL is used as a title, URL-decode it.

Sat Oct 25 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htdig/Server.cc: Fix #829754.  Avoid calculations with negative time

Fri Oct 24 17:17:15 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htdoc/htdig.html, htdoc/meta.html, htdoc/require.html: Update URL for
      the Standard for Robot Exclusion.

    * htdoc/htmerge.html: Added two clarifications to -m option description.

    * htdoc/cf_types.html: Make clear distinction between String List and
      Quoted String List.

Fri Oct 24 15:30:08 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htsearch/Display.cc: Fix bug #829746. Applied Niel Kohl's fix for this,
      to check if words input given before trying to use it, to avoid NULL
      argument to syslog().

Fri Oct 24 15:15:53 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htsearch/Display.cc: Fix bug #578570. The enddate handling now works
      correctly for a large, negative startday value.

Fri Oct 24 12:47:51 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htdig/HTML.cc (ctor): Fix obvious typo in metadatetags.Pattern setting.

Thu Oct 23 10:27:18 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htcommon/default.cc:  Fix bug #828808.  Default  startyear  to empty
      Document "startyear defaults to 1970 if a start/end date set".

Thu Oct 23 12:14:30 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htdig/htdig.cc: restored the code before Oct 21 (fixes ##828628)

Thu Oct 23 11:41:15 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>
